--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
               <li data-target="#demo" data-slide-to="0" class="active"></li>
               <li data-target="#demo" data-slide-to="1"></li>
               <li data-target="#demo" data-slide-to="2"></li>
+              <li data-target="#demo" data-slide-to="3"></li>
+              <li data-target="#demo" data-slide-to="4"></li>
             </ul>
           
             <!-- The slideshow -->
@@ -112,6 +114,20 @@
               </div>
               <div class="carousel-item">
                 <img src="text idea/imgmain3.jpg" alt="New York">
+                <div class="carousel-caption">
+                    <h3>Las Vegas</h3>
+                    <p>We had such a great time in LA!</p>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img src="text idea/imgmain5.jpg" alt="New York">
+                <div class="carousel-caption">
+                    <h3>Las Vegas</h3>
+                    <p>We had such a great time in LA!</p>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img src="text idea/imgmain6.jpg" alt="New York">
                 <div class="carousel-caption">
                     <h3>Las Vegas</h3>
                     <p>We had such a great time in LA!</p>
