--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </div>  
             </li>
             <li class="item"><a  href="#" class="btn btn-2 color-green">DỊCH VỤ</a></li>
-            <li class="item"><a  href="#" class="btn btn-2 color-green">LIÊN HỆ</a></li>
+            <li class="item"><a  href="login.html" class="btn btn-2 color-green">ĐĂNG NHÂP</a></li>
         </ul>
     </div>
     <div class="phone">
@@ -99,7 +99,7 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="text idea/imgmain1.jpg" alt="Los Angeles">
+                <img src="huynhnhu.jpg" alt="Los Angeles">
                     <div class="carousel-caption">
                       <h3>Los Angeles</h3>
                       <p>We had such a great time in LA!</p>
