--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="huynhnhu.jpg" alt="Los Angeles">
+                <img src="text idea/imgmain1.jpg" alt="Los Angeles">
                     <div class="carousel-caption">
                       <h3>Los Angeles</h3>
                       <p>We had such a great time in LA!</p>
