--- a/login.html
+++ b/login.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+         <!--animation css-->   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>HP Furniture</title>
 </head>
 <body>
     <main class="login__registered">
-        <div class="container">
+        <div class="container animate__animated animate__zoomInDown">
             <div class="user signin">
                 <div class="login-img"><img src="login/login1.jpg" alt=""></div>
                 <div class="content">
@@ -32,8 +32,8 @@
                         <input type="text" placeholder="Email">
                         <input type="password" placeholder="NHẬP MẬT KHẨU">
                         <input type="password" placeholder="NHẬP LẠI MẬT KHẨU">
-                        <input type="submit" onclick="check1()" value="Sign Up">
-                        <p class="signup-change">Bạn có chắc chắn tạo tài khoản? <a href="#"  onclick="toggleFrom()">ĐĂNG KÝ</a></p>
+                        <input type="submit" onclick="check1()" value="ĐĂNG KÝ">
+                        <p class="signup-change">Đã có tài khoản? <a href="#"  onclick="toggleFrom()">ĐĂNG NHẬP</a></p>
                     </form>
                 </div>
                 <div class="login-img"><img src="login/login1.jpg" alt=""></div>
