--- a/sanpham.html
+++ b/sanpham.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sanpham.css">
     <title>HP Furniture</title>
+ <!--animation css-->   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="nav">
@@ -102,7 +103,8 @@
         <!-- PHÒNG KHÁCH -->
     <div class="box-furniture">
       <div class="group-box">
-        <div class="box-tittle">
+        <div class="box-tittle animate__animated animate__fadeInUp">
+          <div class="box-tittle ">
           <div class="wrap-main">
             <span>PHÒNG KHÁCH</span> 
              <a href="#">XEM TẤT CẢ</a>
@@ -149,10 +151,12 @@
           </div>
           <!-- PHÒNG NGỦ -->
           <div class="group-box">
-            <div class="box-tittle">
-             <span>PHÒNG NGỦ</span>
-             <hr>
-             <a href="#">XEM TẤT CẢ</a>
+        <div class="box-tittle animate__animated animate__fadeInUp">
+          <div class="box-tittle">
+              <div class="wrap-main">
+                <span>PHÒNG NGỦ</span> 
+                 <a href="#">XEM TẤT CẢ</a>
+              </div>
             </div>
             <div class="box-image">
               <div class="image">
@@ -195,10 +199,12 @@
           </div>
           <!-- PHÒNG ĂN -->
           <div class="group-box">
-            <div class="box-tittle">
-             <span>PHÒNG ĂN</span>
-             <hr>
-             <a href="#">XEM TẤT CẢ</a>
+        <div class="box-tittle  animate__animated animate__fadeInUp">
+          <div class="box-tittle ">
+              <div class="wrap-main">
+                <span>PHÒNG ĂN</span> 
+                 <a href="#">XEM TẤT CẢ</a>
+              </div>
             </div>
                  <div class="box-image">
         <div class="image">
@@ -239,10 +245,12 @@
             </div>
           </div>
           <div class="group-box">
-            <div class="box-tittle">
-             <span>PHÒNG LÀM VIỆC</span>
-             <hr>
-             <a href="#">XEM TẤT CẢ</a>
+        <div class="box-tittle animate__animated animate__fadeInUp">
+          <div class="box-tittle ">
+              <div class="wrap-main">
+                <span>PHÒNG LÀM VIỆC</span> 
+                 <a href="#">XEM TẤT CẢ</a>
+              </div>
             </div>
             <div class="box-image">
               <div class="image">
