--- a/sofa.html
+++ b/sofa.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sofa.css">
     <title>HP Furniture</title>
+     <!--animation css-->   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="nav">
@@ -96,7 +97,7 @@
         </div>
     </section>
     <content>
-    <div class="group">
+    <div class="group animate__animated animate__zoomIn">
       <div class="produce">
         <div class="item-produce">
         <a href="#">
