--- a/service.html
+++ b/service.html
@@ -163,18 +163,18 @@
  <section class="fbzone">
         <div class="my-feedback">
             <div class="feedback">
-                <img src="service/2.jpg">
-                <h5>ông: QUÁCH GIA HƯNG</h5>
+                <div><img src="service/2.jpg"></div>
+                <h5>Ông: QUÁCH GIA HƯNG</h5>
                 <p>Tôi cảm thấy bản thân mình rất may mắn khi được hợp tác với một công ty đầy sức tẻ và uy tính như thế.</p>
             </div>
             <div class="feedback">
-                <img src="service/1.jpg">
-                <h5>bà: LÊ YÊN NHI</h5>
+                <div><img src="service/1.jpg"></div>
+                <h5>Bà: LÊ YÊN NHI</h5>
                 <p> Sự chuyên nghiệp và nhiệt tình của HP Furniture đã chinh phục được cả tôi và gia đình tôi.</p>
             </div>
             <div class="feedback">
-                <img src="service/3.jpg">
-                <h5>ông: NGUYỄN QUANG TIẾN</h5>
+                <div><img src="service/3.jpg"></div>
+                <h5>Ông: NGUYỄN QUANG TIẾN</h5>
                 <p>Nhờ có HP Furniture mà giờ đây tôi đã sở hữu được không gian vô cùng hiện đại. Tôi sẽ giới thiệu HP đến với bạn bè tôi!</p>
            </div>
         </div>
