--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="vi">
 <head>
   <link  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <script src="text.js"></script>
+    <script src="index.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,11 +39,11 @@
         <a href="#"><img src="text idea/HP-tittle1.JPG" alt=""></a>
     </div>
      <div class="menu">
-        <ul>
+        <ul class="topnav" id="myTopnav">
             <li class="item"><a  href="index.html" class="btn btn-2 color-green">Trang chủ</a></li>
             <li class="item"><a  href="intro2.html" class="btn btn-2 color-green">GIỚI THIỆU</a></li>
             <li class="item"><a  href="sanpham.html" class="btn btn-2 color-green">SẢN PHẨM</a>
-              <div class="dropmenu">
+            <div class="dropmenu">
                 <div class="dropmenu-sub">
                   <div class="menu-group">
                     <ul>
@@ -92,6 +92,7 @@
             </li>
             <li class="item"><a  href="service.html" class="btn btn-2 color-green">DỊCH VỤ</a></li>
             <li class="item"><a  href="login.html" class="btn btn-2 color-green">ĐĂNG NHÂP</a></li>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">☰</a>
         </ul>
     </div>
     <div class="phone">
